# openeffect

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: build-and-push-nightly-docker-image.yml  build-and-push-release-docker-image.yml  publish-pypi-package.yml
cli/: index.js  package.json
client/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: DollarBadge.tsx  FileDropzone.tsx  FilterDropdown.tsx  ImageUploader.tsx  KeyringFallbackNotice.tsx  PricingBadge.tsx  RestoreFormBanner.tsx  RunHistoryItem.tsx  VideoPlayer.tsx
client/src/components/ui/: Checkbox.tsx  DropdownMenu.tsx  Input.tsx  Label.tsx  Select.tsx  Separator.tsx  Textarea.tsx  Tooltip.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  textarea.tsx
client/src/effects/: EffectFormRenderer.tsx
client/src/effects/components/: AdvancedSettings.tsx  AspectRatioSelector.tsx  DurationSelector.tsx  EffectFormField.tsx  ExamplePreview.tsx  GenerateButton.tsx  ModelSelector.tsx
client/src/effects/types/: ImageLoopForm.tsx  ImageTransitionForm.tsx  SingleImageForm.tsx  (+1 more)
client/src/hooks/: useIntersectionObserver.ts  useSse.ts
client/src/layout/: Header.tsx  Layout.tsx
client/src/lib/: api.ts  formatters.ts  router.ts
client/src/primitives/: FileDropzone.tsx  ImageUploader.tsx  VideoPlayer.tsx
client/src/store/: configStore.ts  editorStore.ts  effectsStore.ts  generationStore.ts  historyStore.ts  index.ts  sseManager.ts  types.ts
client/src/styles/: globals.css  themes.css
client/src/types/: api.ts
client/src/utils/: api.ts  formCarry.ts  formatters.ts  modelParams.ts  playgroundSeed.ts  router.ts  runRecord.ts  theme.ts  yaml.ts
client/tests/lib/: api.test.ts
client/tests/store/: editorStore.test.ts  effectsActions.test.ts  effectsStore.test.ts  formCarry.test.ts  generationStore.test.ts  historyStore.test.ts  routing.test.ts  runStore.test.ts  sseManager.test.ts
client/tests/utils/: api.test.ts  formCarry.test.ts
effects/animation/crash-zoom In/: manifest.yaml
effects/animation/crash-zoom-in/: manifest.yaml
effects/animation/cyborg-transformation/: manifest.yaml
effects/animation/cyborg_transformation/: manifest.yaml
effects/animation/eyes-glow/: manifest.yaml
effects/animation/eyes_glow/: manifest.yaml
effects/animation/melting/: manifest.yaml
effects/animation/orbit-subject/: manifest.yaml
effects/animation/orbit_subject/: manifest.yaml
effects/animation/paparazzi-flash/: manifest.yaml
effects/animation/paparazzi_flash/: manifest.yaml
effects/animation/set-on-fire/: manifest.yaml
effects/animation/set_on_fire/: manifest.yaml
effects/animation/turning-metal/: manifest.yaml
effects/animation/turning_metal/: manifest.yaml
effects/animation/wind-to-face/: manifest.yaml
effects/animation/zoom-from-space/: manifest.yaml
effects/atmosphere/eyes-glow/: manifest.yaml
effects/atmosphere/paparazzi-flash/: manifest.yaml
effects/atmosphere/set-on-fire/: manifest.yaml
effects/atmosphere/wind-to-face/: manifest.yaml
effects/camera-move/crash-zoom-in/: manifest.yaml
effects/camera-move/orbit-subject/: manifest.yaml
effects/camera-move/zoom-from-space/: manifest.yaml
effects/image-loop/breathe-loop/: manifest.yaml
effects/image-loop/flicker-flame/: manifest.yaml
effects/image-loop/flow-hair/: manifest.yaml
effects/image-loop/pulse-glow/: manifest.yaml
effects/image-loop/ripple-water/: manifest.yaml
effects/image-transition/glitch-cut/: manifest.yaml
effects/image-transition/morph-liquid/: manifest.yaml
effects/image-transition/shatter-reveal/: manifest.yaml
effects/image-transition/teleport-scenes/: manifest.yaml
effects/single-image/breathe-portrait/: manifest.yaml
effects/single-image/glitch-self/: manifest.yaml
effects/single-image/push-cinematic/: manifest.yaml
effects/single-image/transform-birds/: manifest.yaml
effects/single-image/zoom-from-space/: manifest.yaml
effects/text-to-video/generate-abstract/: manifest.yaml
effects/text-to-video/generate-cinematic/: manifest.yaml
effects/text-to-video/generate-timelapse/: manifest.yaml
effects/transform/cyborg-transformation/: manifest.yaml
effects/transform/melting/: manifest.yaml
effects/transform/set-on-fire/: manifest.yaml
effects/transform/turning-metal/: manifest.yaml
server/: main.py  pyproject.toml
server/app/: main.py
server/app/config/: config_service.py  settings.py
server/app/effects/: validator.py
server/app/providers/: factory.py  fal_provider.py  local_provider.py
server/app/routes/: __init__.py  history.py  models.py  uploads.py
server/app/services/: effect_loader.py  generation_service.py  history_service.py  model_service.py  prompt_builder.py
server/config/: config_service.py  settings.py
server/core/: image_convert.py  limits.py  media_sniff.py  states.py
server/db/: database.py
server/effects/: jinja_env.py  prompt_builder.py  validator.py
server/providers/: base.py  factory.py  fal_provider.py  local_provider.py  mock_provider.py  model_params.py
server/routes/: __init__.py  _errors.py  config.py  effects.py  files.py  generation.py  generations.py  models.py  run.py  runs.py  uploads.py
server/schemas/: file_ref.py  run.py
server/services/: effect_loader.py  errors.py  file_service.py  generation_service.py  history_service.py  install_service.py  model_service.py  run_service.py  storage_service.py
server/tests/: _factories.py  conftest.py  test_config_service.py  test_effect_validator.py  test_fal_provider.py  test_file_ref.py  test_file_service.py  test_history_service.py  test_image_convert.py  test_install_conflict.py  test_install_routes.py  test_install_state_lifecycle.py  test_model_service.py  test_prompt_builder.py  test_routes.py  test_run_pipeline.py  test_run_routes.py  test_storage_service.py  test_upload_security.py  test_video_reverse.py
(+75 files in other folders)
