[project]
name = "openeffect"
version = "0.1.0"
description = "Open magic for your media — AI video effects tool"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0.0",
    "fal-client>=0.5.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",
    "httpx>=0.27.0",
    "uuid-utils>=0.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
openeffect = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "run.py",
    "server/",
    "client/dist/",
    "effects/",
]

[tool.ruff]
target-version = "py310"
select = ["E", "F", "I", "UP", "N"]
src = ["server"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests"]
