[project]
name = "openeffect"
version = "0.1.0"
description = "Open magic for your media - an AI video-effects tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi[standard]>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.0",
    "fal-client>=0.5.0",
    "python-multipart>=0.0.26",
    "aiofiles>=24.0.0",
    "httpx>=0.27.0",
    "uuid-utils>=0.9.0",
    "Pillow>=12.2.0",
    "imageio-ffmpeg>=0.6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.11",
    "mypy>=1.20.2",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
openeffect = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# `client/dist/` is gitignored (it's a build artifact). Hatchling honors
# `.gitignore` by default, so we have to explicitly mark dist as a build
# artifact for it to land in the wheel.
artifacts = ["client/dist/**"]
# Keep test code and bytecode out of the published wheel.
exclude = [
    "server/tests",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
# Strict whitelist. Without `only-include`, hatch falls back to globbing
# the project root (modulo .gitignore), which would pull in `client/src/`,
# `server/tests/`, etc. Only these paths ship in the wheel.
only-include = [
    "run.py",
    "server",
    "client/dist",
    "effects",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["server"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# Registry-style tabular data in model_service.py is more readable unwrapped;
# wrapping each dict across 4+ lines makes the provider/variant/param layout
# much harder to scan.
"server/services/model_service.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests"]
